5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1800_2565.log
== TEST (2019-06-05 18:47:14) 
-- CODE:
from numpy import*
me=array(eval(input("medias: ")))
p=array(eval(input("num. de horas: ")))
ch=int(input("carga horaria: "))
x=zeros(3,dtype=int)
for i range (size(me)):
	if(me[i]>=5 and p[i]>((ch*75)/100)):
		x[0]=x[0]+1
	elif(me[i]<5 and p[i]>((ch*75)/100)):
		x[1]=x[1]+1
	elif(me[i]>=5 and p[i]<((ch*75)/100)):
		x[2]=x[2]+1
print(x)
	

-- ERROR:
File "XXXX", line 6
    for i range (size(me)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 18:48:25) 
-- CODE:
from numpy import*
me=array(eval(input("medias: ")))
p=array(eval(input("num. de horas: ")))
ch=int(input("carga horaria: "))
x=zeros(3,dtype=int)
for i range(size(me)):
	if(me[i]>=5 and p[i]>((ch*75)/100)):
		x[0]=x[0]+1
	elif(me[i]<5 and p[i]>((ch*75)/100)):
		x[1]=x[1]+1
	elif(me[i]>=5 and p[i]<((ch*75)/100)):
		x[2]=x[2]+1
print(x)
	

-- ERROR:
File "XXXX", line 6
    for i range(size(me)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 18:49:24) 
-- CODE:
from numpy import*
me=array(eval(input("medias: ")))
p=array(eval(input("num. de horas: ")))
ch=int(input("carga horaria: "))
x=zeros(3,dtype=int)
for i in range(size(me)):
	if(me[i]>=5 and p[i]>((ch*75)/100)):
		x[0]=x[0]+1
	elif(me[i]<5 and p[i]>((ch*75)/100)):
		x[1]=x[1]+1
	elif(me[i]>=5 and p[i]<((ch*75)/100)):
		x[2]=x[2]+1
print(x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 18:51:29) 
-- CODE:
from numpy import*
me=array(eval(input("medias: ")))
p=array(eval(input("num. de horas: ")))
ch=int(input("carga horaria: "))
x=zeros(3,dtype=int)
for i in range(size(me)):
	if(me[i]>=5 and p[i]>=((ch*75)/100)):
		x[0]=x[0]+1
	elif(me[i]<5 and p[i]>((ch*75)/100)):
		x[1]=x[1]+1
	elif(me[i]>=5 and p[i]<((ch*75)/100)):
		x[2]=x[2]+1
print(x)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 18:52:16) 
-- CODE:
from numpy import*
me=array(eval(input("medias: ")))
p=array(eval(input("num. de horas: ")))
ch=int(input("carga horaria: "))
x=zeros(3,dtype=int)
for i in range(size(me)):
	if(me[i]>=5 and p[i]>=((ch*75)/100)):
		x[0]=x[0]+1
	elif(me[i]<5 and p[i]>((ch*75)/100)):
		x[1]=x[1]+1
	elif(me[i]>=5 and p[i]<((ch*75)/100)):
		x[2]=x[2]+1
print(x)
	

-- EXECUTION TIME:
1.10642
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
